...
}

extension MovieQuizViewController: AlertPresenterDelegate {
    func showFinalResults() {
        let alertMessage = presenter.makeAlertMessage()
        
        let alertModel = AlertModel(title: "Игра окончена!",
                                    message: alertMessage,
                                    buttonText: "Сыграть заново!") { [weak self] in
            self?.presenter.restartGame()
        }
        alertPresenter?.show(alertModel: alertModel)
    }
...
